--- a/egzamin2_desktop/MainWindow.xaml
+++ b/egzamin2_desktop/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:egzamin2_desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Wzornik kolorów RGB, Wykonał: 89391831 " Height="450" Width="800" Background="Cornsilk">
+
     <Grid>
+        <Label HorizontalAlignment="Left" Height="78" Margin="92,37,0,0" VerticalAlignment="Top" Width="604" Background="White"/>
+        <Label Content="Dobierz kolor suwakami i zapisz przyciskiem:" HorizontalAlignment="Left" Height="46" Margin="98,154,0,0" VerticalAlignment="Top" Width="546"/>
+        <Slider HorizontalAlignment="Left" Margin="116,199,0,0" VerticalAlignment="Top" Width="580" Maximum="255" Value="255"/>
+        <Slider HorizontalAlignment="Left" Margin="116,248,0,0" VerticalAlignment="Top" Width="580" Maximum="255" Value="255"/>
+        <Slider HorizontalAlignment="Left" Margin="116,299,0,0" VerticalAlignment="Top" Width="580" Maximum="255" Value="255"/>
+        <Label Content="R" HorizontalAlignment="Left" Height="31" Margin="67,199,0,0" VerticalAlignment="Top" Width="31"/>
+        <Label Content="G" HorizontalAlignment="Left" Margin="70,248,0,0" VerticalAlignment="Top"/>
+        <Label Content="B" HorizontalAlignment="Left" Margin="70,299,0,0" VerticalAlignment="Top"/>
+        <Button Content="Pobierz" HorizontalAlignment="Left" Margin="346,325,0,0" VerticalAlignment="Top" Background="Peru"/>
+        <Label Content="" HorizontalAlignment="Left" Margin="327,375,0,0" VerticalAlignment="Top" Height="35" Width="79" Background="White"/>
 
     </Grid>
+
 </Window>
